# desktopAutomation

./: README.md  main.py  pyproject.toml  requirements.txt  test_connection.py
artifacts/: README.md
automation/: mouse_keyboard.py  notepad.py
data/: api_client.py
desktop/: grounding.py  icon_detector.py  screenshot.py
utils/: logger.py  retry.py
